increase backdrop z-index for modal; fix base url recognition for live deployment

--- a/src/components/easycredit-modal/easycredit-modal.scss
+++ b/src/components/easycredit-modal/easycredit-modal.scss
@@ -87,7 +87,7 @@
     position: fixed;
     left: 0;
     top: 0;
-    z-index: 3000;
+    z-index: 9999;
 
     display: none;
     width: 100%;
